[package]
name = "car-utils"
version = "0.1.5"
edition = "2021"
authors = ["Join.Gong<joinhack@gmail.com>", "Derek Anderson<derek@txlabs.org>"]
description = "This crate is the ipfs car file reader writer and utils."
license = "MIT/Apache-2.0"
repository = "https://github.com/blocklessnetwork/car-utils"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
blockless-car = "0.1.5"
