[package]
name = "blockless-car"
version = "0.2.0"
edition = "2021"
authors = ["Join.Gong<joinhack@gmail.com>", "Derek Anderson<derek@txlabs.org>", "Zeeshan.Sarwar<zeeshan@txlabs.org>"]
description = "This crate is the ipfs car file reader writer and utils library."
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipld = { version = "0.15.0", package = "libipld"}
ipld-cbor = {version = "0.15.0", package = "libipld-cbor"}
thiserror = "1"
cid = "0.9"
integer-encoding = "3.0.4"
path-absolutize = "3"
quick-protobuf = { default-features = false, features = ["std"], version = "0.8" }
