[package]
name = "blockless-car"
version.workspace = true
edition = "2021"
authors = [
    "Join.Gong<joinhack@gmail.com>",
    "Derek Anderson<derek@txlabs.org>",
    "Zeeshan.Sarwar<zeeshan@txlabs.org>",
]
description = "This crate is the ipfs car file reader writer and utils library."
license = "MIT/Apache-2.0"
homepage = "https://github.com/blocklessnetwork"
repository = "https://github.com/blocklessnetwork/car-utils"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipld = { version = "0.16.0", package = "libipld" }
ipld-cbor = { version = "0.16.0", package = "libipld-cbor" }
thiserror = "1"
cid = "0.10"
integer-encoding = "4.0"
quick-protobuf = { default-features = false, features = [
    "std",
], version = "0.8" }
multicodec = "0.1.0"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8"
rand_chacha = "0.3"
home = "0.5"
